--- a/my-project/package.json
+++ b/my-project/package.json
@@ -102,16 +102,20 @@
     "typescript": "^5.6.3",
     "update-browserslist-db": "^1.1.1",
     "util-deprecate": "^1.0.2",
-    "vite": "^5.4.11",
     "which": "^2.0.2",
     "wrap-ansi": "^8.1.0",
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.6.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vite": "^5.4.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -119,4 +123,3 @@
   "description": "",
   "type": "module"
 }
-
