--- a/my-project/package.json
+++ b/my-project/package.json
@@ -108,6 +108,7 @@
     "yaml": "^2.6.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.11"
   },
   "scripts": {
@@ -115,7 +116,8 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
